--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -109,7 +109,10 @@
                 {% endblock %}
 
                 {% block sw_settings_shipping_detail_price_matrices %}
-                    <sw-settings-shipping-price-matrices v-if="!isLoading" :shippingMethod="shippingMethod"></sw-settings-shipping-price-matrices>
+                    <sw-settings-shipping-price-matrices v-if="!isLoading"
+                                                         :shippingMethod="shippingMethod"
+                                                         ref="priceMatrices">
+                    </sw-settings-shipping-price-matrices>
                 {% endblock %}
             </sw-card-view>
         {% endblock %}
