--- a/Resources/administration/src/app/component/utils/sw-notification-center-item/sw-notification-center-item.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-notification-center-item/sw-notification-center-item.html.twig
@@ -30,6 +30,12 @@
                             {{ notification.message }}
                         </p>
                     {% endblock %}
+                    {% block sw_notification_center_item_loader %}
+                        <sw-loader v-if="notification.isLoading"
+                                   class="sw-notification-center-item__loader"
+                                   size="20px">
+                        </sw-loader>
+                    {% endblock %}
                 </div>
             {% endblock %}
         </div>
