NEXT-2692 - Update translations & remove debugging code

--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -70,7 +70,7 @@
                         :cmsPage="cmsPage"
                         :mediaItem="mediaItem"
                         :isLoading="isLoading"
-                        @sw-category-view-on-page-change="onCmsLayoutChange"
+                        @sw-category-view-on-page-change="getAssignedCmsPage"
                         @sw-category-view-on-open-sidebar="openSidebar"
                         @sw-category-view-on-set-media="setMediaItem"
                         @sw-category-view-on-upload-media="onUploadAdded"
