NEXT-2265 - Added listing block

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.scss
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.scss
@@ -277,6 +277,10 @@ $sw-field-color-error: $color-crimson;
 
             option {
                 color: $sw-field-color-text;
+
+                &:disabled {
+                    color: $color-steam-cloud;
+                }
             }
 
             &.is--placeholder {
