--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
@@ -175,13 +175,16 @@
                                                         {% block sw_cms_detail_sidebar_page_settings_type_field %}
                                                             <sw-select-field :label="$tc('sw-cms.detail.labelPageType')" v-model="page.type" @change="onPageTypeChange">
                                                                 {% block sw_cms_detail_sidebar_page_settings_type_field_options %}
+                                                                    <option value="page">
+                                                                        {{ $tc('sw-cms.detail.labelPageTypeShopPage') }}
+                                                                    </option>
                                                                     <option value="landingpage">
                                                                         {{ $tc('sw-cms.detail.labelPageTypeLandingpage') }}
                                                                     </option>
                                                                     <option value="product_list">
                                                                         {{ $tc('sw-cms.detail.labelPageTypeCategory') }}
                                                                     </option>
-                                                                    <option value="product_detail">
+                                                                    <option value="product_detail" disabled>
                                                                         {{ $tc('sw-cms.detail.labelPageTypeProduct') }}
                                                                     </option>
                                                                 {% endblock %}
@@ -230,7 +233,7 @@
                                                         <div class="sw-cms-detail__block-preview"
                                                              v-for="block in cmsBlocks"
                                                              :key="block.name"
-                                                             v-if="block.category === currentBlockCategory"
+                                                             v-if="block.category === currentBlockCategory && block.hidden !== true"
                                                              v-draggable="{ dragGroup: 'cms-stage', data: { block }, onDrop: onBlockStageDrop }">
                                                             {% block sw_cms_detail_sidebar_block_overview_preview_component %}
                                                                 <component :is="block.previewComponent"></component>
@@ -304,13 +307,17 @@
                                                         {% endblock %}
 
                                                         {% block sw_cms_detail_sidebar_navigator_element_duplicate %}
-                                                            <div class="navigator-element__action-duplicate" @click="onBlockDuplicate(block)">
+                                                            <div class="navigator-element__action-duplicate"
+                                                                 v-if="cmsBlocks[block.type].removable !== false"
+                                                                 @click="onBlockDuplicate(block)">
                                                                 <sw-icon name="default-action-duplicate" size="16"></sw-icon>
                                                             </div>
                                                         {% endblock %}
 
                                                         {% block sw_cms_detail_sidebar_navigator_element_delete %}
-                                                            <div class="navigator-element__action-delete" @click="onBlockDelete(block.id)">
+                                                            <div class="navigator-element__action-delete"
+                                                                 v-if="cmsBlocks[block.type].removable !== false"
+                                                                 @click="onBlockDelete(block.id)">
                                                                 <sw-icon name="default-action-trash" size="16"></sw-icon>
                                                             </div>
                                                         {% endblock %}
