NEXT-2265 - Refactored CMS toolbar

--- a/Resources/administration/src/module/sw-cms/component/sw-cms-toolbar/sw-cms-toolbar.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-toolbar/sw-cms-toolbar.scss
@@ -1,10 +1,11 @@
 @import "~scss/variables";
 
 .sw-cms-toolbar {
+    padding: 0 20px;
     min-height: 70px;
     border-bottom: 2px solid #d1d9e0;
     display: grid;
-    grid-template-columns: 80px 180px 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 158px auto;
     align-items: center;
     align-content: center;
 
@@ -32,7 +33,6 @@
     }
 
     .sw-cms-toolbar__actions {
-        padding: 0 20px;
         text-align: right;
     }
 }
