NEXT-2910 - Use TranslatedFields in admin

--- a/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-visibility-detail/sw-product-visibility-detail.html.twig
@@ -9,7 +9,7 @@
                                 {{ item.salesChannelInternal.translated.name }}
                             </span>
                             <span v-else>
-                                {{ item.salesChannel.name }}
+                                {{ item.salesChannel.translated.name }}
                             </span>
                         {% endblock %}
                     </sw-grid-column>
